--- a/index.html
+++ b/index.html
@@ -6,70 +6,90 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Viciados em Greys Anatomy</title>
     <link rel="stylesheet" href="./css/style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap"
+      rel="stylesheet "
+    />
   </head>
   <body>
     <header>
       <h1>Viciados em Greys Anatomy</h1>
       <nav>
         <ul>
-          <li><a href=>Personagens</a></li>
-          <li><a href=>Temporadas</a></li>
-          <li><a href=>Contatos</a></li>
+          <li><a href="character.html">Personagens</a></li>
+          <li><a href="season.html">Temporadas</a></li>
+          <li><a href="contact.html">Contatos</a></li>
         </ul>
       </nav>
-	  
     </header>
-	<main>
-		<section id="inicio">
-		  <h2>Quem Somos</h2>
-		  <img
-			src=""
-			
-			
-		  />
-		  <p>
-			Esta página foi pensada com o objetivo de compartilhar notícias e curiosidades sobre a série Grey's Anatomy.
-		  </p>
-		  <h2>Sobre a série...</h2>
-		  <p>
-			A série foca na vida de médicos cirurgiões internos, residentes e atendentes; e como eles evoluem na sua profissão ao tentar manter a vida dos seus pacientes e nos seus relacionamentos pessoais. 
-			A ideia original foi de Shonda Rhimes, que além de idealizadora é produtora executiva, juntamente com Betsy Beers, Mark Gordon, Krista Vernoff, Rob Corn, Mark Wilding e Allan Heinberg. 
-			A série se passa em torno da vida da médica Meredith Grey, interpretada por Ellen Pompeo.
-			Grey's Anatomy é um dos dramas de melhor audiência nos Estados Unidos, apesar da queda nas últimas temporadas, estando entre os 10 melhores no ranking de audiência e sendo bem recebido pelos críticos durante o seu tempo de exibição, onde foi incluído entre os 10 melhores de várias listas de criticas em 2006. É considerado uma série de impacto significativo na cultura popular e recebeu vários prêmios, incluindo o prêmio de Melhor Série de Drama no Globo de Ouro de 2007, além de várias indicações ao Emmy, incluindo duas para Primetime de melhor série de drama. 
-			Na 17ª temporada, a série está abordando a realidade dos hospitais em todo mundo no contexto da pandemia da Covid-19, mostrando a dificuldade e exaustão dos profissionais em salvar vidas independente de seu esforço, mesmo que isso signifique ficar longe de suas próprias famílias para não colocá-los em risco.
-			Em 10 de janeiro de 2022, Grey's Anatomy foi renovada para a 19ª temporada. A protagonista da trama, Ellen Pompeo retornará como Meredith Grey e ainda assumirá o posto de produtora executiva da atração nos novos episódios.
-		  </p>
-		</section>
-	  </main>
+    <main>
+      <section id="inicio">
+        <h2>Quem Somos</h2>
+        <img src="viciados.jpg" />
+        <p>
+          Esta página foi pensada com o objetivo de compartilhar notícias e
+          curiosidades sobre a série Grey's Anatomy. Somos uma legião de fãs que
+          amam acompanhar o dia a dia do Grey Sloan Memorial Hospital.
+        </p>
+        <h2>Sobre a série...</h2>
+        <img src="greys-anatomy.jpg" alt="" />
+        <p>
+          A série foca na vida de médicos cirurgiões internos, residentes e
+          atendentes; e como eles evoluem na sua profissão ao tentar manter a
+          vida dos seus pacientes e nos seus relacionamentos pessoais. A ideia
+          original foi de Shonda Rhimes, que além de idealizadora é produtora
+          executiva, juntamente com Betsy Beers, Mark Gordon, Krista Vernoff,
+          Rob Corn, Mark Wilding e Allan Heinberg. A série se passa em torno da
+          vida da médica Meredith Grey, interpretada por Ellen Pompeo. Grey's
+          Anatomy é um dos dramas de melhor audiência nos Estados Unidos, apesar
+          da queda nas últimas temporadas, estando entre os 10 melhores no
+          ranking de audiência e sendo bem recebido pelos críticos durante o seu
+          tempo de exibição, onde foi incluído entre os 10 melhores de várias
+          listas de criticas em 2006. É considerado uma série de impacto
+          significativo na cultura popular e recebeu vários prêmios, incluindo o
+          prêmio de Melhor Série de Drama no Globo de Ouro de 2007, além de
+          várias indicações ao Emmy, incluindo duas para Primetime de melhor
+          série de drama. Na 17ª temporada, a série está abordando a realidade
+          dos hospitais em todo mundo no contexto da pandemia da Covid-19,
+          mostrando a dificuldade e exaustão dos profissionais em salvar vidas
+          independente de seu esforço, mesmo que isso signifique ficar longe de
+          suas próprias famílias para não colocá-los em risco. Em 10 de janeiro
+          de 2022, Grey's Anatomy foi renovada para a 19ª temporada. A
+          protagonista da trama, Ellen Pompeo retornará como Meredith Grey e
+          ainda assumirá o posto de produtora executiva da atração nos novos
+          episódios.
+        </p>
+      </section>
+    </main>
 
-	  <footer>
-		<p>Cadastre-se e receba novidades por email!!</p>
-		<div class="form">
-		  <form>
-			<label>Nome:</label>
-			<input
-			  type="text"
-			  name="nome"
-			  id="nome"
-			  placeholder="Digite seu Nome"
-			/>
-			<label>E-mail:</label>
-			<input
-			  type="email"
-			  name="email"
-			  id="email"
-			  placeholder="Digite seu Email"
-			/>
-			<label>Telefone:</label>
-			<input
-			  type="number"
-			  name="telefone"
-			  id="telefone"
-			  placeholder="Digite seu telefone "
-			/>
-			<button id="botaoEnviar">Enviar</button>
-		  </form>
-		</div>
-	  </footer>
+    <footer>
+      <p>Cadastre-se e receba novidades por email!!</p>
+      <div class="form">
+        <form>
+          <label>Nome:</label>
+          <input
+            type="text"
+            name="nome"
+            id="nome"
+            placeholder="Digite seu Nome"
+          />
+          <label>E-mail:</label>
+          <input
+            type="email"
+            name="email"
+            id="email"
+            placeholder="Digite seu Email"
+          />
+          <label>Telefone:</label>
+          <input
+            type="number"
+            name="telefone"
+            id="telefone"
+            placeholder="Digite seu telefone "
+          />
+          <button id="botaoEnviar">Enviar</button>
+        </form>
+      </div>
+    </footer>
   </body>
 </html>
