Inlcuindo informações de personagens

--- a/character.html
+++ b/character.html
@@ -22,5 +22,153 @@
         </ul>
       </nav>
     </header>
+    <main>
+      <section id="introducao">
+        <h2>Personagens</h2>
+        Muitos foram os personagens que passaram pela série e deixaram muitas
+        saudades para todos os fãs. Falar de todos é uma verdadeira missão, mas
+        escolhemos alguns que marcaram com suas história e são inesquecíveis.
+      </section>
+      <section>
+        <table>
+          <tbody>
+            <tr>
+              <td>
+                <h3>Meredith Grey</h3>
+                <img src="./imagens/Meredith.png" id="perso" alt="" />
+              </td>
+              <td>
+                <h3>Cristina Yang</h3>
+                <img src="./imagens/cristina.jpg" alt="" />
+              </td>
+              <td>
+                <h3>Alex Karev</h3>
+                <img src="./imagens/alex.jpg" alt="" />
+              </td>
+            </tr>
+
+            <tr>
+              <td>
+                <h3>Izzie Stevens</h3>
+                <img src="./imagens/izzie.jpg" alt="" />
+              </td>
+              <td>
+                <h3>George O'Malley</h3>
+                <img src="./imagens/george.jpg" alt="" />
+              </td>
+              <td>
+                <h3>Lexie Grey</h3>
+                <img src="./imagens/lexie.jpg" alt="" />
+              </td>
+            </tr>
+
+            <tr>
+              <td>
+                <h3>Derek Shepherd</h3>
+                <img src="./imagens/derek.jpg" alt="" />
+              </td>
+
+              <td>
+                <h3>Richard Webber</h3>
+                <img src="./imagens/richard.jpg" alt="" />
+              </td>
+              <td>
+                <h3>Miranda Bailey</h3>
+                <img src="./imagens/bailey.jpg" alt="" />
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <h3>Mark Sloan</h3>
+                <img src="./imagens/mark.jpg" alt="" />
+              </td>
+              <td>
+                <h3>Preston Burke</h3>
+                <img src="./imagens/preston.jpg" alt="" />
+              </td>
+              <td>
+                <h3>Addison Montgomery</h3>
+                <img src="./imagens/adison.jpg" alt="" />
+              </td>
+            </tr>
+
+            <tr>
+              <td>
+                <h3>Callie Torres</h3>
+                <img src="./imagens/callie.jpg" alt="" />
+              </td>
+
+              <td>
+                <h3>Arizona Robbins</h3>
+                <img src="./imagens/arizona.jpg" alt="" />
+              </td>
+              <td>
+                <h3>Owen Hunt</h3>
+                <img src="./imagens/owen.jpg" alt="" />
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <h3>April Kepner</h3>
+                <img src="./imagens/april.jpg" alt="" />
+              </td>
+
+              <td>
+                <h3>Jackson Avery</h3>
+                <img src="./imagens/jacson.jpg" alt="" />
+              </td>
+              <td>
+                <h3>Jo Wilson</h3>
+                <img src="./imagens/jo.jpg" alt="" />
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <h3>AAmelia Shepherd</h3>
+                <img src="./imagens/amelia.jpg" alt="" />
+              </td>
+
+              <td>
+                <h3>Maggie Pierce</h3>
+                <img src="./imagens/maggie.jpg" alt="" />
+              </td>
+              <td>
+                <h3>Ben Warren</h3>
+                <img src="./imagens/ben.jpg" alt="" />
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </section>
+    </main>
+    <footer>
+      <p>Cadastre-se e receba novidades por email!!</p>
+      <div class="form">
+        <form>
+          <label>Nome:</label>
+          <input
+            type="text"
+            name="nome"
+            id="nome"
+            placeholder="Digite seu Nome"
+          />
+          <label>E-mail:</label>
+          <input
+            type="email"
+            name="email"
+            id="email"
+            placeholder="Digite seu Email"
+          />
+          <label>Telefone:</label>
+          <input
+            type="number"
+            name="telefone"
+            id="telefone"
+            placeholder="Digite seu telefone "
+          />
+          <button id="botaoEnviar">Enviar</button>
+        </form>
+      </div>
+    </footer>
   </body>
 </html>
