Incluindo mais personagens

--- a/character.html
+++ b/character.html
@@ -137,6 +137,51 @@
                 <img src="./imagens/ben.jpg" alt="" />
               </td>
             </tr>
+            <tr>
+              <td>
+                <h3>Thomas Koracick</h3>
+                <img src="./imagens/tom.jpg" alt="" />
+              </td>
+
+              <td>
+                <h3>Andrew DeLuca</h3>
+                <img src="./imagens/deluca.jpg" alt="" />
+              </td>
+              <td>
+                <h3>Nathan Riggs</h3>
+                <img src="./imagens/nathan.jpg" alt="" />
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <h3>Levi Schmitt</h3>
+                <img src="./imagens/levi.jpg" alt="" />
+              </td>
+
+              <td>
+                <h3>Atticus Lincoln</h3>
+                <img src="./imagens/lincon.jpg" alt="" />
+              </td>
+              <td>
+                <h3>Cormac Hayes</h3>
+                <img src="./imagens/cormac.jpg" alt="" />
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <h3>Winston Ndugu</h3>
+                <img src="./imagens/winston.jpg" alt="" />
+              </td>
+
+              <td>
+                <h3>Nico Kim</h3>
+                <img src="./imagens/nico.jpg" alt="" />
+              </td>
+              <td>
+                <h3>Carina DeLuca</h3>
+                <img src="./imagens/carina.jpg" alt="" />
+              </td>
+            </tr>
           </tbody>
         </table>
       </section>
