Alterando endereço de imagem

--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
     <main>
       <section id="inicio">
         <h2>Quem Somos</h2>
-        <img src="viciados.jpg" />
+        <img src="./imagens/viciados.jpg" />
         <p>
           Esta página foi pensada com o objetivo de compartilhar notícias e
           curiosidades sobre a série Grey's Anatomy. Somos uma legião de fãs que
           amam acompanhar o dia a dia do Grey Sloan Memorial Hospital.
         </p>
         <h2>Sobre a série...</h2>
-        <img src="greys-anatomy.jpg" alt="" />
+        <img src="./imagens/greys-anatomy.jpg" alt="" />
         <p>
           A série foca na vida de médicos cirurgiões internos, residentes e
           atendentes; e como eles evoluem na sua profissão ao tentar manter a
