Incluindo sessão de contato

--- a/contact.html
+++ b/contact.html
@@ -22,6 +22,26 @@
         </ul>
       </nav>
     </header>
+    <main>
+      <section>
+        <h2>Contatos</h2>
+        <p>
+          Para contato com o Viciados em Grey's encaminhe-nos um e-mail que
+          teremos maior prazer em atendê-los, com a maior brevidade possível.
+        </p>
+        <p>
+          Além disso você pode contribuir com nosso blog nos enviando novidades
+          sobre a série e os personagens.
+        </p>
+
+        <h3>viciadosgreys@gmail.com</h3>
+        <form>
+          <label id="recado"> Gostou de nosso blog? Deixe seu recado: </label>
+          <textarea id="textarea" name="recado" rows="5" cols="33"></textarea>
+          <input type="submit" id="enviarRecado" />
+        </form>
+      </section>
+    </main>
     <footer>
       <p>Cadastre-se e receba novidades por email!!</p>
       <div class="form">
