Criando tabela com informações sobre temporadas.

--- a/season.html
+++ b/season.html
@@ -22,34 +22,192 @@
         </ul>
       </nav>
     </header>
-    <footer>
-      <p>Cadastre-se e receba novidades por email!!</p>
-      <div class="form">
-        <form>
-          <label>Nome:</label>
-          <input
-            type="text"
-            name="nome"
-            id="nome"
-            placeholder="Digite seu Nome"
-          />
-          <label>E-mail:</label>
-          <input
-            type="email"
-            name="email"
-            id="email"
-            placeholder="Digite seu Email"
-          />
-          <label>Telefone:</label>
-          <input
-            type="number"
-            name="telefone"
-            id="telefone"
-            placeholder="Digite seu telefone "
-          />
-          <button id="botaoEnviar">Enviar</button>
-        </form>
-      </div>
-    </footer>
+    <main>
+      <section class="introducao"></section>
+      <section class="table">
+        <table>
+          <thead>
+            <tr>
+              <td>Temporadas</td>
+              <td>Sinopse</td>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>1ª Temporada: (2005)</td>
+              <td>
+                A temporada mostra os primeiros meses das personagens como
+                internos e como é seu dia-a-dia. Entre as tramas, destacam-se os
+                esforços de Meredith para manter em segredo seu relacionamento
+                com o Dr. Shepherd e o fato de que sua mãe possui Alzheimer,
+                assim como a rivalidade entre Burke e Shepherd pela futura
+                direção do hospital.
+              </td>
+            </tr>
+            <tr>
+              <td>2ª Temporada: (2005 – 2006)</td>
+              <td>
+                A 2ª temporada fornece uma perspectiva detalhada sobre os
+                antecedentes pessoais de cada personagem, centrando nas
+                consequências que suas decisões tem sobre suas carreiras.
+                Meredith descobre que Derek é casado.
+              </td>
+            </tr>
+            <tr>
+              <td>3ª Temporada: (2006 – 2007)</td>
+              <td>
+                A terceira temporada de Grey’s Anatomy é estremamente explosiva.
+                É marcada pela morte de Denny, as dificuldades de Preston e Yang
+                pós-cirurgia, a doença do pai de George e as dificuldades de
+                relacionamento de Derek e Meredith .
+              </td>
+            </tr>
+            <tr>
+              <td>4ª Temporada: (2007 – 2008)</td>
+              <td>
+                As personagens passam a ter problemas com seus novos internos, e
+                o pior acontece quando logo no começo da temporada Meredith
+                descobre que um dos internos de Cristina é a sua meia-irmã
+                Lexie, uma relação que trará grandes desafios pela frente.
+                George agora é um interno do primeiro ano novamente e a
+                residente responsável por ele é a Dra. Meredith Grey.
+              </td>
+            </tr>
+            <tr>
+              <td>5ª Temporada: (2008 – 2009)</td>
+              <td>
+                Izzie começa a ter uma série de alucinações com Denny Duquette
+                que estão relacionados com um tumor que ela tem que se alastra
+                ao cérebro, à pele e ao fígado e com apenas 5% de sobrevivência.
+                O personagem de George morre. Meredith e Derek se casam com um
+                post-it.
+              </td>
+            </tr>
+            <tr>
+              <td>6ª Temporada: (2009 – 2010)</td>
+              <td>
+                Essa temporada é marcada pela fusão do Seattle Grace Hospital
+                com o Mercy West. Com a fusão, há a entrada de novos
+                personagens. Meredith descobre que esta grávida mas perde a bebê
+                numa sala de cirurgia.
+              </td>
+            </tr>
+
+            <tr>
+              <td>7ª Temporada: (2010 – 2011)</td>
+              <td>
+                Cristina e Owen se casarão, Derek será preso por ultrapassar
+                limites de velocidade e devolverá o cargo de chefe para o
+                “Chefe”, os demais continuarão tentando superar as feridas que
+                permaneceram após a crise. Cristina parece ser a mais afetada já
+                que operou Derek Sheperd com uma arma apontada em sua cabeça, e
+                um novo elenco nos fará prestar muita atenção aos corredores do
+                famoso Hospital.
+              </td>
+            </tr>
+            <tr>
+              <td>8ª Temporada (2011-2012)</td>
+              <td>
+                Meredith, Cristina, Alex, Jackson e April chegaram ao seu 5º ano
+                como residentes. E nesse ano eles podem fazer com que tudo dê
+                certo ou podem acabar com a sua carreira de cirurgiões. Os
+                residentes tem a tarefa de fazer a sua primeira cirurgia-solo, e
+                dessa vez sem a supervisão dos seus atendentes na sala de
+                operação. Esta temporada é marcada pelo acidente de avião. Lexie
+                morre, Arizona perde uma perna, e todos tentam se recuperar
+                desse terrível acidente.
+              </td>
+            </tr>
+            <tr>
+              <td>9ª Temporada (2012-2013)</td>
+              <td>
+                A queda do avião mudou tudo. Agora, com seus futuros
+                desconhecidos, os médicos do Seattle Grace precisam aprender a
+                se adaptar a mudanças, a lidar com suas perdas e a seguir em
+                frente com seus relacionamentos e suas carreiras. Seattle Grace
+                é um lugar onde a vida não é vivida em preto e branco, mas em
+                tons de cinza.
+              </td>
+            </tr>
+            <tr>
+              <td>10ª Temporada (2013-2014)</td>
+              <td>
+                A tempestade pode ter passado, mas agora os relacionamentos e
+                romance no Grey Sloan Memorial devem sobreviver após ela.
+                Vínculos são testados, amor é perdido e o hospital se despede da
+                Dra. Cristina Yang.
+              </td>
+            </tr>
+            <tr>
+              <td>11ª Temporada (2014-2015)</td>
+              <td>
+                Os médicos do Grey Sloan Memorial enfrentam surpresas
+                impressionantes, desafios sem precedentes e decisões que mudam a
+                vida. Segredos do passado vem à tona quando Meredith descobre
+                uma nova irmã, filha de Richard. Derek recebe uma proposta que o
+                leva para longe de sua família e Bailey assume o lugar de
+                Cristina no conselho do hospital.
+              </td>
+            </tr>
+            <tr>
+              <td>12ª Temporada (2015-2016)</td>
+              <td>
+                Meredith ainda está lidando com a perda de Derek e agora divide
+                a antiga casa de sua mãe com Maggie e Amelia. Um segredo sobre o
+                passado de Jo é revelado e Alex se coloca em uma difícil
+                posição.
+              </td>
+            </tr>
+            <tr>
+              <td>13ª Temporada (2016-2017)</td>
+              <td>
+                Os eventos desta temporada se inciam a partir do momento final
+                da 12ª temporada, onde os médicos estão na festa de casamento de
+                Amélia Shepherd e Owen Hunt, nquanto, Alex Karev está no
+                hospital com Andrew DeLuca após ter espancado ele, o foco
+                principal está no conflito duvidoso se Alex vai ou não para a
+                cadeia.
+              </td>
+            </tr>
+            <tr>
+              <td>14ª Temporada (2017-2018)</td>
+              <td>
+                A décima quarta temporada começa quando Meredith e a equipe
+                estão focados em ajudar a irmã de Owen após seu retorno
+                chocante, enquanto Amelia enfrenta um conflito sobre um
+                paciente. Miranda Bailey é forçada a dar ao Grey Sloan um
+                facelift após o incêndio e os médicos são apresentados a alguns
+                rostos novos que apimentam as coisas ao redor do hospital.
+                Amelia a descobre que tem um enorme tumor no seu cérebro.
+              </td>
+            </tr>
+            <tr>
+              <td>15ª Temporada (2018-2019)</td>
+              <td>
+                Seattle é atingida por uma enorme tempestade e o Grey-Sloan fica
+                inundado de pacientes. DeLuca revela oque sente por Meredith que
+                havia decidido sair com Link, Teddy conta para Owen que está
+                grávida, Levi se declara para Nico e Cece fica em risco assim se
+                preparando para fazer um cirurgia do coração um pouco arriscada.
+              </td>
+            </tr>
+            <tr>
+              <td>16ª temporada (2019-2020)</td>
+              <td>
+                A demissão de Meredith, Richard e Alex traz consequências
+                graves. É enfatizado na temporada o triângulo amoroso contínuo
+                entre Owen, Teddy e Tom. Além disso, traz histórias sobre as
+                políticas de imigração dos Estados Unidos e o sistema de
+                assistência médica "quebrado".
+              </td>
+            </tr>
+            <tr>
+              <td>17ª temporada (2019-2020)</td>
+              <td>Em construção....</td>
+            </tr>
+          </tbody>
+        </table>
+      </section>
+    </main>
   </body>
 </html>
