Incluindo lista de personagens.

--- a/character.html
+++ b/character.html
@@ -29,162 +29,130 @@
         saudades para todos os fãs. Falar de todos é uma verdadeira missão, mas
         escolhemos alguns que marcaram com suas história e são inesquecíveis.
       </section>
-      <section>
-        <table>
-          <tbody>
-            <tr>
-              <td>
-                <h3>Meredith Grey</h3>
-                <img src="./imagens/Meredith.png" id="perso" alt="" />
-              </td>
-              <td>
-                <h3>Cristina Yang</h3>
-                <img src="./imagens/cristina.jpg" alt="" />
-              </td>
-              <td>
-                <h3>Alex Karev</h3>
-                <img src="./imagens/alex.jpg" alt="" />
-              </td>
-            </tr>
-
-            <tr>
-              <td>
-                <h3>Izzie Stevens</h3>
-                <img src="./imagens/izzie.jpg" alt="" />
-              </td>
-              <td>
-                <h3>George O'Malley</h3>
-                <img src="./imagens/george.jpg" alt="" />
-              </td>
-              <td>
-                <h3>Lexie Grey</h3>
-                <img src="./imagens/lexie.jpg" alt="" />
-              </td>
-            </tr>
-
-            <tr>
-              <td>
-                <h3>Derek Shepherd</h3>
-                <img src="./imagens/derek.jpg" alt="" />
-              </td>
-
-              <td>
-                <h3>Richard Webber</h3>
-                <img src="./imagens/richard.jpg" alt="" />
-              </td>
-              <td>
-                <h3>Miranda Bailey</h3>
-                <img src="./imagens/bailey.jpg" alt="" />
-              </td>
-            </tr>
-            <tr>
-              <td>
-                <h3>Mark Sloan</h3>
-                <img src="./imagens/mark.jpg" alt="" />
-              </td>
-              <td>
-                <h3>Preston Burke</h3>
-                <img src="./imagens/preston.jpg" alt="" />
-              </td>
-              <td>
-                <h3>Addison Montgomery</h3>
-                <img src="./imagens/adison.jpg" alt="" />
-              </td>
-            </tr>
-
-            <tr>
-              <td>
-                <h3>Callie Torres</h3>
-                <img src="./imagens/callie.jpg" alt="" />
-              </td>
-
-              <td>
-                <h3>Arizona Robbins</h3>
-                <img src="./imagens/arizona.jpg" alt="" />
-              </td>
-              <td>
-                <h3>Owen Hunt</h3>
-                <img src="./imagens/owen.jpg" alt="" />
-              </td>
-            </tr>
-            <tr>
-              <td>
-                <h3>April Kepner</h3>
-                <img src="./imagens/april.jpg" alt="" />
-              </td>
-
-              <td>
-                <h3>Jackson Avery</h3>
-                <img src="./imagens/jacson.jpg" alt="" />
-              </td>
-              <td>
-                <h3>Jo Wilson</h3>
-                <img src="./imagens/jo.jpg" alt="" />
-              </td>
-            </tr>
-            <tr>
-              <td>
-                <h3>AAmelia Shepherd</h3>
-                <img src="./imagens/amelia.jpg" alt="" />
-              </td>
-
-              <td>
-                <h3>Maggie Pierce</h3>
-                <img src="./imagens/maggie.jpg" alt="" />
-              </td>
-              <td>
-                <h3>Ben Warren</h3>
-                <img src="./imagens/ben.jpg" alt="" />
-              </td>
-            </tr>
-            <tr>
-              <td>
-                <h3>Thomas Koracick</h3>
-                <img src="./imagens/tom.jpg" alt="" />
-              </td>
-
-              <td>
-                <h3>Andrew DeLuca</h3>
-                <img src="./imagens/deluca.jpg" alt="" />
-              </td>
-              <td>
-                <h3>Nathan Riggs</h3>
-                <img src="./imagens/nathan.jpg" alt="" />
-              </td>
-            </tr>
-            <tr>
-              <td>
-                <h3>Levi Schmitt</h3>
-                <img src="./imagens/levi.jpg" alt="" />
-              </td>
-
-              <td>
-                <h3>Atticus Lincoln</h3>
-                <img src="./imagens/lincon.jpg" alt="" />
-              </td>
-              <td>
-                <h3>Cormac Hayes</h3>
-                <img src="./imagens/cormac.jpg" alt="" />
-              </td>
-            </tr>
-            <tr>
-              <td>
-                <h3>Winston Ndugu</h3>
-                <img src="./imagens/winston.jpg" alt="" />
-              </td>
-
-              <td>
-                <h3>Nico Kim</h3>
-                <img src="./imagens/nico.jpg" alt="" />
-              </td>
-              <td>
-                <h3>Carina DeLuca</h3>
-                <img src="./imagens/carina.jpg" alt="" />
-              </td>
-            </tr>
-          </tbody>
-        </table>
-      </section>
+      <div class="character">
+        <ul>
+          <li>
+            <h3>Meredith Grey</h3>
+            <img src="./imagens/Meredith.png" id="perso" alt="" />
+          </li>
+          <li>
+            <h3>Cristina Yang</h3>
+            <img src="./imagens/cristina.jpg" alt="" />
+          </li>
+          <li>
+            <h3>Alex Karev</h3>
+            <img src="./imagens/alex.jpg" alt="" />
+          </li>
+          <li>
+            <h3>Izzie Stevens</h3>
+            <img src="./imagens/izzie.jpg" alt="" />
+          </li>
+          <li>
+            <h3>George O'Malley</h3>
+            <img src="./imagens/george.jpg" alt="" />
+          </li>
+          <li>
+            <h3>Lexie Grey</h3>
+            <img src="./imagens/lexie.jpg" alt="" />
+          </li>
+          <li>
+            <h3>Derek Shepherd</h3>
+            <img src="./imagens/derek.jpg" alt="" />
+          </li>
+          <li>
+            <h3>Richard Webber</h3>
+            <img src="./imagens/richard.jpg" alt="" />
+          </li>
+          <li>
+            <h3>Miranda Bailey</h3>
+            <img src="./imagens/bailey.jpg" alt="" />
+          </li>
+          <li>
+            <h3>Mark Sloan</h3>
+            <img src="./imagens/mark.jpg" alt="" />
+          </li>
+          <li>
+            <h3>Preston Burke</h3>
+            <img src="./imagens/preston.jpg" alt="" />
+          </li>
+          <li>
+            <h3>Addison Montgomery</h3>
+            <img src="./imagens/adison.jpg" alt="" />
+          </li>
+          <li>
+            <h3>Callie Torres</h3>
+            <img src="./imagens/callie.jpg" alt="" />
+          </li>
+          <li>
+            <h3>Arizona Robbins</h3>
+            <img src="./imagens/arizona.jpg" alt="" />
+          </li>
+          <li>
+            <h3>Owen Hunt</h3>
+            <img src="./imagens/owen.jpg" alt="" />
+          </li>
+          <li>
+            <h3>April Kepner</h3>
+            <img src="./imagens/april.jpg" alt="" />
+          </li>
+          <li>
+            <h3>Jackson Avery</h3>
+            <img src="./imagens/jacson.jpg" alt="" />
+          </li>
+          <li>
+            <h3>Jo Wilson</h3>
+            <img src="./imagens/jo.jpg" alt="" />
+          </li>
+          <li>
+            <h3>AAmelia Shepherd</h3>
+            <img src="./imagens/amelia.jpg" alt="" />
+          </li>
+          <li>
+            <h3>Maggie Pierce</h3>
+            <img src="./imagens/maggie.jpg" alt="" />
+          </li>
+          <li>
+            <h3>Ben Warren</h3>
+            <img src="./imagens/ben.jpg" alt="" />
+          </li>
+          <li>
+            <h3>Thomas Koracick</h3>
+            <img src="./imagens/tom.jpg" alt="" />
+          </li>
+          <li>
+            <h3>Andrew DeLuca</h3>
+            <img src="./imagens/deluca.jpg" alt="" />
+          </li>
+          <li>
+            <h3>Nathan Riggs</h3>
+            <img src="./imagens/nathan.jpg" alt="" />
+          </li>
+          <li>
+            <h3>Levi Schmitt</h3>
+            <img src="./imagens/levi.jpg" alt="" />
+          </li>
+          <li>
+            <h3>Atticus Lincoln</h3>
+            <img src="./imagens/lincon.jpg" alt="" />
+          </li>
+          <li>
+            <h3>Cormac Hayes</h3>
+            <img src="./imagens/cormac.jpg" alt="" />
+          </li>
+          <li>
+            <h3>Winston Ndugu</h3>
+            <img src="./imagens/winston.jpg" alt="" />
+          </li>
+          <li>
+            <h3>Nico Kim</h3>
+            <img src="./imagens/nico.jpg" alt="" />
+          </li>
+          <li>
+            <h3>Carina DeLuca</h3>
+            <img src="./imagens/carina.jpg" alt="" />
+          </li>
+        </ul>
+      </div>
     </main>
   </body>
 </html>
