--- a/character.html
+++ b/character.html
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Viciados em Grey's Anatomy - Personagens</title>
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap"
-      rel="stylesheet "
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&family=Sacramento&display=swap"
+      rel="stylesheet"
     />
   </head>
   <body>
@@ -29,11 +31,11 @@
         saudades para todos os fãs. Falar de todos é uma verdadeira missão, mas
         escolhemos alguns que marcaram com suas história e são inesquecíveis.
       </section>
-      <div class="character">
-        <ul>
+      <div>
+        <ul class="character">
           <li>
             <h3>Meredith Grey</h3>
-            <img src="./imagens/Meredith.png" id="perso" alt="" />
+            <img src="./imagens/Meredith.png" alt="" />
           </li>
           <li>
             <h3>Cristina Yang</h3>
