--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Viciados em Greys Anatomy</title>
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap"
-      rel="stylesheet "
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&family=Sacramento&display=swap"
+      rel="stylesheet"
     />
   </head>
   <body>
@@ -23,7 +25,7 @@
       </nav>
     </header>
     <main>
-      <section id="inicio">
+      <section>
         <h2>Quem Somos</h2>
         <img src="./imagens/viciados.jpg" />
         <p>
